<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/default_dialog_theme"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1"
        android:id="@+id/dialog_table"
        android:background="@android:color/white"
        >
    <TableRow style="@style/TableRowOdd">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reporter"
            android:textStyle="bold"
            style="@style/TableCell"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/reporter"
            android:gravity="left"
            android:text=""
            style="@style/TableCell"
            />
    </TableRow>
    <TableRow style="@style/TableRowEven">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reason"
            android:textStyle="bold"
            style="@style/TableCell"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/reason"
            android:gravity="left"
            android:text=""
            style="@style/TableCell"
            />
    </TableRow>
    <TableRow style="@style/TableRowOdd">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cellphone"
            android:textStyle="bold"
            style="@style/TableCell"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cellphone"
            android:gravity="left"
            android:text=""
            style="@style/TableCell"
            />
    </TableRow>
    <TableRow style="@style/TableRowEven">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/need_company"
                android:textStyle="bold"
                style="@style/TableCell"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/need_company_checkbox"
                android:buttonTint="@android:color/holo_red_light"
                android:clickable="false"
            />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="match_parent"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/need_reply"
                android:textStyle="bold"
                style="@style/TableCell"
                />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/need_reply_checkbox"
                android:buttonTint="@android:color/holo_red_light"
                android:clickable="false"
                />
        </LinearLayout>
    </TableRow>
    </TableLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/loading_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>
</LinearLayout>